--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
@@ -16,6 +17,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-navigation": "^2.21.0-experimental.4",
     "react-native-popover-view": "^2.0.1",
+    "react-native-timeago": "^0.4.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0"
   },
